# fast_api_demo

./: .env.example  README.md  mypy.ini  pyproject.toml
app/application/api/: main.py
app/application/api/chat/: filters.py  handlers.py  schema.py
app/domain/entities/: base.py  chat.py
app/domain/events/: chat.py
app/domain/exceptions/: chat.py
app/domain/values/: chat.py
app/infrastructure/repositories/chat/: base.py  converters.py  memory.py  mongo.py
app/infrastructure/repositories/message/: base.py  mongo.py
app/logic/: init.py
app/logic/commands/: chat.py
app/logic/exceptions/: chat.py
app/logic/queries/: chat.py
app/settings/: config.py
app/tests/: fixtures.py
app/tests/application/: test_chat.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_chat.py
docker-compose/: storages.yml
