[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["Alexey Iskovskikh <iskovskikh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["all"], version = "^0.30.1"}
punq = "^0.7.0"
pydantic-settings = "^2.3.3"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
faker = "^25.8.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

